<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BetaMidrash</string>
    <string name="action_settings">Settings</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="title_activity_text"></string>
    <string name="activity_filterlinks">Filter Sources</string>
    <string name="activity_help">Help</string>
    <string name="activity_about">About</string>
    <string name="shortcut_label">Shortcut</string>
    <string name="activity_search">Search</string>
    <string name="activity_text">Text Activity</string>
    <string name="activity_main">Main Activity</string>
    <string name="LIBRARY_EMPTY_MESSAGE">To use the app, you need to download the BetaMidrash library. Do you want to do this now?\nYou can always click \'Update Library\' in settings to update.</string>
    <string name="NEW_UPDATE_MESSAGE">Do you want to download the new Sefaria library now?\nYou can always tap \'Update Library\' in settings to update.</string>
    <string name="NO_INTERNET_MESSAGE">You need internet in order to download the update. Try again later.</string>
    <string name="USING_DATA_MESSAGE">You are using mobile data (not WIFI). The update is about 100MB. Do you want to download it anyways?</string>
    <string name="FIRST_UPDATE_FAIL_MESSAGE">You don\'t have internet to download the library. You can install it manually when you have internet by going to Settings and tapping \'Update Library\'.</string>
    <string name="NO_NEW_UPDATE_MESSAGE">There is no new update to download. Try again later.</string>
    <string name="UPDATE_STARTED_MESSAGE">Your library is downloading and installing. This should only take a few minutes. If it is taking longer than 5-10 minutes after downloading, which should also only be a few minutes, then cancel update (and it most likely worked).</string>
    <string name="LIBRARY_EMPTY_TITLE">Library Empty</string>
    <string name="NEW_UPDATE_TITLE">Update Available</string>
    <string name="YES">Yes</string>
    <string name="LATER">Later</string>
    <string name="NO_INTERNET_TITLE">No Internet</string>
    <string name="CONTINUE">Continue</string>
    <string name="CANCEL">Cancel</string>
    <string name="USING_DATA_TITLE">Using mobile data</string>
    <string name="FIRST_UPDATE_FAIL_TITLE">Can\'t download library</string>
    <string name="OK">OK</string>
    <string name="NO_NEW_UPDATE_TITLE">No New Update</string>
    <string name="UPDATE_STARTED_TITLE">Updating Library</string>
    <string name="MESSAGE_CANT_STOP_NOW">The update cannot be canceled at this point. Please wait for it to finish.</string>
    <string name="FIRST_TIME_TEXT_MESSAGE">Go through the help dialogs to learn about the app</string>
    <string name="FIRST_TIME_TEXT_TITLE">Welcome to BetaMidrash!</string>
    <string name="DL_INTERNET_LOST_TITLE">Internet Lost</string>
    <string name="DL_INTERNET_LOST_MESSAGE">Please try to update again when you have internet</string>
    <string name="DL_NOT_ENOUGH_SPACE_TITLE">Not Enough Space</string>
    <string name="DL_NOT_ENOUGH_SPACE_MESSAGE">Your phone doesn\'t have enough space to store the entire library</string>
    <string name="DL_UNKNOWN_ERROR_TITLE">Unknown Download Error</string>
    <string name="DL_UNKNOWN_ERROR_MESSAGE">Please try again</string>
    <string name="book_not_available">Book currently not available&#8230;</string>
    <string name="found">Found</string>
    <string name="occurrences">occurrences of</string>
    <string name="no_other_lang">No other language available</string>
    <string name="bookmark_added">Bookmark added</string>
    <string name="texts_contain">texts contain</string>
    <string name="defaults_restored">Defaults Restored</string>
    <string name="saved">Saved Successfully</string>
    <string name="no_match_filter">No sources match filter</string>
    <string name="no_links">No sources available</string>
    <string name="upgrade_to_newest">Upgrade to the newest version of</string>
    <string name="view_bookmarks">View Bookmarks</string>
    <string name="hebrew">Hebrew</string>
    <string name="english">English</string>
    <string name="update_preparing">Update is still setting up. Wait a moment to cancel.</string>
    <string name="about_text_p1">BetaMidrash is created and owned by Josh Herzberg, &lt;a href=\'mailto:jherzberg@torahsummary.com\'&gt;jherzberg@torahsummary.com&lt;/a&gt;, and Noah Santacruz, &lt;a href=\'mailto:noahssantacruz@gmail.com\'&gt;noahssantacruz@gmail.com&lt;/a&gt;.</string>
    <string name="about_text_p2">BetaMidrash is revolutionizing the mobile Torah learning experience and has one of largest libraries of Torah texts on a mobile device, with tens of thousands of English translations, and half a million connections between the texts. With a user friendly design, easy jumping between connected sources, and advanced searching to help you find what you\'re looking for quickly, it is one best places to study Torah on the go.</string>
    <string name="about_text_p3">Our library is from &lt;a href=\'http://www.sefaria.org\'&gt;Sefaria.org&lt;/a&gt; , with slight modifications. Sefaria  is breaking grounds in the world of digitized Jewish texts. It is an open source library, so if you want to add translations or books, the power is in your hands. They check the accuracy of the content, making  have the most accurate Talmud text freely available on the internet, using the Vilna shas as the standard. One of the things that makes Sefaria so unique is that all their texts are copyright free and open for anyone to use for any purpose. BetaMidrash isn\'t part of the Sefaria project, but Sefaria\'s openness enables us to use the Torah.</string>
    <string name="about_text_p4">For any bugs, problems, or suggestions please feel free to email us. If you enjoy BetaMidrash, don\'t forget to rate it on the play store.</string>
    <string name="about_text_p5">Creating the world\'s most powerful mobile Torah App doesn\'t happen overnight. It takes lots of time and resources. You can find out more at &lt;a href=\'http://betamidrash.org\'&gt;BetaMidrash.org&lt;/a&gt;. Thank you so much and enjoy your torah.</string>
    <string name="error_parsing_query_n">Error Parsing Query - trying nikudah dependent search.</string>
    <string name="error_parsing_query">Error Parsing Query</string>
    <string name="kill_switch_message">I\'m sorry, but this version has been discontinued.</string>
    <string name="problem_writting_file">There was a problem writing file. Please check app permissions.</string>
    <string name="app_version_is">App Version:\u0020</string>
    <string name="library_version_is">Library Version:\u0020</string>
    <string name="copyright_2015">Copyright 2015</string>
    <string name="no_bookmarks">No Bookmarks.\nTo add, go to any text and tap the star icon.</string>
    <string name="add_bookmarks">Add Bookmark</string>
    <string name="remove_bookmarks">Remove Bookmark</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="all">All</string>
    <string name="done">Done</string>
    <string name="none">None</string>
    <string name="no_sources_avilable">(No sources available for this text)</string>
    <string name="search_library">Search Texts</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="book_title_language">Book Title Language</string>
    <string name="text_background_color">Text Background Color</string>
    <string name="default_text_language">Default Text Language</string>
    <string name="bilingual">Bilingual</string>
    <string name="show_hebrew_vowels_">Show Hebrew Vowels / Cantillation Marks</string>
    <string name="nekudot_not_supported_">(Note: Nekudot are not fully supported on your version of Android)</string>
    <string name="no">No</string>
    <string name="layout_for_bilingual_texts">Layout for bilingual texts</string>
    <string name="hebrew_and_English_side_by_side">Hebrew and English side by side</string>
    <string name="hebrew_on_top_of_english">Hebrew on top of English</string>
    <string name="font_size">Font Size</string>
    <string name="save_settings">Save Settings</string>
    <string name="restore_defaults">Restore Defaults</string>
    <string name="update_library">Update Library</string>
    <string name="edit">Edit</string>
    <string name="stop_edit">Stop Edit</string>
    <string name="find_on_page">Find on Page</string>
    <string name="view_on_sefaria">View on Sefaria</string>
    <string name="help">Help</string>
    <string name="filter_sources">Filter Sources</string>
    <string name="eng_heb">Eng/Heb</string>
    <string name="home">Home</string>
    <string name="exit_search">Exit Search</string>
    <string name="next_search">Next Search</string>
    <string name="previous_search">Previous Search</string>
  	<string name="finished_searching">Finished searching</string>
  	<string name="searching_help1">You can search in Hebrew or English.</string>
  	<string name="searching_help2">English will only return texts containing the exact expression (case insensitive).</string>
  	<string name="searching_help2_5">Hebrew will return texts which contain all of the searched words (irrelevant of their location in the text). It ignores leading vavs (כל will also return וכל).</string>
  	<string name="searching_help3">For advanced search use _ as single character and % as zero or more characters.</string>
  	<string name="searching_help3_5" formatted="false">For example: b_g returns texts with big or bag. Name % city returns texts like name of the city. %ברא returns texts with בראם or בראשון. And כלי_ returns texts with הכלי or בכלי.</string>
  	<string name="askjosh">If you\'re looking for something in Gemara or Chumash &lt;a href=\'mailto:askjosh@torahsummary.com\'&gt;askjosh@torahsummary.com&lt;/a&gt; might be able to help.</string>
    <string name="ARE_YOU_SURE_TITLE">Are you sure you want to cancel?</string>
    <string name="ARE_YOU_SURE_MESSAGE">Are you sure you want to cancel? Your update might need to be restarted.</string>
    <string name="CHECKING_FOR_UPDATE_TITLE">Checking for update</string>
	<string name="finish">Finish</string>
	<string name="mainMenuSearchHint">Search Texts or Book Titles</string>
	
	<string name="apiexception">Problem getting data from internet</string>


    
</resources>