<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="org.sefaria.sefariamobile.TextActivity" >

    <item
        android:id="@+id/action_findonpage"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="102"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/find_on_page"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_sefariaLink"
        android:orderInCategory="106"
        android:showAsAction="never"
        android:title="@string/view_on_sefaria"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="107"
        android:showAsAction="never"
        android:title="@string/help"/>

    <!-- icon menu items -->
    <item
        android:id="@+id/filter_links"
        android:icon="@drawable/ic_link"
        android:showAsAction="never"
        android:orderInCategory="100"
        android:title="@string/filter_sources"/>

    <item
        android:id="@+id/action_en"
        android:icon="@drawable/eng_lang"
        android:showAsAction="always"
        android:title="@string/english"/>
        
    <item
        android:id="@+id/action_enandhe"
        android:icon="@drawable/bi_lang"
        android:showAsAction="always"
        android:title="@string/eng_heb"/>
    <item
        android:id="@+id/action_he"
        android:icon="@drawable/heb_lang"
        android:showAsAction="always"
        android:title="@string/hebrew"/>
    <item
        android:id="@+id/action_btn_home"
        android:icon="@drawable/ic_home"
        android:showAsAction="always"
        android:title="@string/home"/>
    <item
        android:id="@+id/action_view_bms"
        android:icon="@drawable/ic_action_important"
        android:showAsAction="always"
        android:title="@string/view_bookmarks"/>
    <item
        android:id="@+id/action_prevChap"
        android:icon="@drawable/ic_action_previous_item"
        android:showAsAction="always"
        android:title="@string/previous"/>
    <item
        android:id="@+id/action_nextChap"
        android:icon="@drawable/ic_action_next_item"
        android:showAsAction="always"
        android:title="@string/next"/>
    <item
        android:id="@+id/exitSearch"
        android:icon="@drawable/ic_action_undo"
        android:showAsAction="always"
        android:title="@string/exit_search"/>
    <item
        android:id="@+id/nextSearch"
        android:icon="@drawable/ic_action_expand"
        android:showAsAction="always"
        android:title="@string/next_search"/>
    <item
        android:id="@+id/prevSearch"
        android:icon="@drawable/ic_action_collapse"
        android:showAsAction="always"
        android:title="@string/previous_search"/>

</menu>