<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.sefaria.sefariamobile.MainActivity" >

    
     <item
        android:id="@+id/action_en"
        android:icon="@drawable/eng_lang"
        android:title="@string/english"
        android:showAsAction="always"
        />
    <item
        android:id="@+id/action_he"
        android:icon="@drawable/heb_lang"
        android:showAsAction="always"
        android:title="@string/hebrew"/>
    <item
        android:id="@+id/action_btn_home"
        android:icon="@drawable/ic_home"
        android:showAsAction="always"
        android:title="@string/app_name"/>
    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="always"
        android:title="@string/search_library"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="104"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="105"
        android:showAsAction="never"
        android:title="@string/activity_help"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="106"
        android:showAsAction="never"
        android:title="@string/activity_about"/>
    <!--
        <item 
        android:id="@+id/action_add_bms"
        android:icon="@drawable/ic_action_important"
        android:showAsAction="ifRoom"
        android:title="Add Bookmarks"/>
    -->
    <item
        android:id="@+id/action_view_bms"
        android:icon="@drawable/ic_action_important"
        android:showAsAction="always"
        android:title="@string/view_bookmarks"/>
    <!-- 
     <item android:id="@+id/search"
          android:title="Search"
          android:icon="@drawable/ic_action_search"
          android:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.widget.SearchView" />
    -->

</menu>