<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.sefaria.sefariamobile.SettingsActivity" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0.19"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/bgColorTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_background_color"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/bgColorRG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true" >

            <RadioButton
                android:id="@+id/bgWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/white" />

            <RadioButton
                android:id="@+id/bgBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/black" />
        </RadioGroup>
		<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/btlangTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_title_language"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/btlangRG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/btengRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english" />

                <RadioButton
                    android:id="@+id/bthebRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hebrew" />

            </RadioGroup>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/langTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_text_language"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/langRG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/engRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english" />

                <RadioButton
                    android:id="@+id/hebRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hebrew" />

                <RadioButton
                    android:id="@+id/bilRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bilingual" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/nikudTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_hebrew_vowels_"
                android:textAppearance="?android:attr/textAppearanceMedium" />
			<TextView
			    android:id="@+id/nikudWarning"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/nekudot_not_supported_"
			    android:textAppearance="?android:attr/textAppearanceSmall" />
           <RadioGroup
                android:id="@+id/nikudRG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/nikudYesRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/YES" />

                <RadioButton
                    android:id="@+id/nikudNoRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />

   
            </RadioGroup>
        </LinearLayout>
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
           <TextView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textAppearance="?android:attr/textAppearanceMedium" 
               android:text="@string/layout_for_bilingual_texts"/>
           <RadioGroup 
               android:id="@+id/bilayoutRG"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
               <RadioButton 
                   android:id="@+id/bilayoutHorRB"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/hebrew_and_English_side_by_side"/>
               <RadioButton 
                   android:id="@+id/bilayoutVerRB"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/hebrew_on_top_of_english"/>
           </RadioGroup>
		    
		</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/fontSizeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/font_size"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/fontSizeET"
                    android:layout_width="58dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="saveSettings"
                android:text="@string/save_settings" />

            <Button
                android:id="@+id/restoreDefaultsBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="restoreDefaults"
                android:text="@string/restore_defaults" />

            <TextView
                android:id="@+id/currLibVersTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/library_version_is"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/updateLibBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:onClick="updateLibrary"
                android:text="@string/update_library" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>