<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.sefaria.sefariamobile.BookmarksActivity" >

    <TextView
        android:id="@+id/nobms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/no_bookmarks"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/addbmbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="addBookmark"
        android:text="@string/add_bookmarks" />

    <Button
        android:id="@+id/rembmbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="removeBookmark"
        android:text="@string/remove_bookmarks" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>